<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".pantallas.paciente.TeleconsultasPacienteActivity">

    <include
        android:id="@+id/include"
        layout="@layout/fragment_header_paciente"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/include"
        layout="@layout/fragment_navegacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:background="#F5F5F5"
        android:elevation="100dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_añadir_teleconsulta"
                android:layout_width="wrap_content"
                android:layout_height="69dp"
                android:layout_gravity="bottom|right"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="100dp"
                android:clickable="true"
                android:contentDescription="@string/a_adir_citas"
                android:focusable="true"
                app:backgroundTint="@color/verde_claro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_mas"
                app:tint="@android:color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_teleconsultas"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/img_usuario"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/subirimagenmolon" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_teleconsultas_respondidas"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="40dp"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView_teleconsultas" />

            <TextView
                android:id="@+id/consultasEnviadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="5dp"
                android:text="Consultas enviadas:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView_teleconsultas"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/consultasRespondidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="5dp"
                android:text="Consultas respondidas:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView_teleconsultas_respondidas"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/teleconsultas"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_usuario" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edittxt_buscar_citas"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_buscar_citas"
        android:ems="10"
        android:inputType="text"
        android:text="@string/buscar_teleconsulta"
        android:textAlignment="textStart"
        android:textColor="#8A8A8A"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>